--- a/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Age" class="control-label"></label>
-            <input asp-for="Age" class="form-control" />
+            <input asp-for="Age" type="text" class="form-control" />
             <span asp-validation-for="Age" class="text-danger"></span>
         </div>
         <div class="form-group">
