--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -303,7 +303,8 @@
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <strong>Renda Paciente:</strong>
-                                        <span>@Model.Family?.MonthlyIncome.ToString("C2")</span>
+                                        @*Todo read this*@
+                                        @*<span>@Model.Family?.MonthlyIncome.ToString("C2")</span>*@
                                     </div>
                                     <div class="col-lg-4">
                                         <strong>Renda Familiar:</strong>
