--- a/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
@@ -63,6 +63,11 @@
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
+                <label asp-for="Age" class="control-label"></label>
+                <input asp-for="Age" type="text" class="form-control" />
+                <span asp-validation-for="Age" class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-4">
                 <div class="checkbox">
                     <label>
                         <input asp-for="FamiliarityGroup" /> @Html.DisplayNameFor(model => model.FamiliarityGroup)
