--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -13,7 +13,7 @@
         <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        @*<link href="~/dist/css/presence.min.css" rel="stylesheet" asp-append-version="true" />*@
+        <link href="~/dist/css/presence.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 }
 
@@ -112,10 +112,10 @@
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
         <script src="~/lib/select2/js/select2.min.js"></script>
-        <script src="~/js/presence.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+        <script src="~/js/presence.js"></script>
     </environment>
     <environment exclude="Development">
-        @*<script src="~/dist/js/presence.min.js" asp-append-version="true"></script>*@
+        <script src="~/dist/js/presence.min.js" asp-append-version="true"></script>
     </environment>
 }
