--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -11,7 +11,7 @@
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
     <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/buttons/1.5.4/css/buttons.bootstrap4.min.css" />
+    <link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />
 </environment>
     <environment exclude="Development">
         <link href="~/dist/css/presence.min.css" rel="stylesheet" asp-append-version="true" />
@@ -117,15 +117,12 @@
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
         <script src="~/lib/select2/js/select2.min.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
-
-        @*Todo Change this to use Package Manager*@
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.bootstrap4.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.html5.min.js"></script>
-       
+        <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/lib/jszip/jszip.min.js"></script>
+        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
+        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
+        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="~/js/presence.js"></script>
     </environment>
     <environment exclude="Development">
