--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -29,22 +29,46 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
+                                <i class="fas fa-filter"></i> Filtros
+                                <div class="card-header-actions">
+                                    <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
+                                        <i class="fa fa-minus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card-block collapse show" id="filterCollapse">
+                                <form id="searchForm">
+                                    <div class="form-row form-group">
+                                    </div>
+                                    <div class="form-inline float-right">
+                                        <div class="form-group">
+                                            <div class="btn-group">
+                                                <button type="submit" class="btn btn-primary">
+                                                    <i class="fas fa-filter"></i> Filtrar
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header">
                                 <i class="fa fa-capsules"></i> Remédios
                             </div>
                             <div class="card-block">
-                                <div class="form-inline">
-                                    <div class="form-group">
-                                        <div class="btn-group">
-                                            <a asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                                <i class="fa fa-plus"></i> Adicionar Remédio
-                                            </a>
-                                        </div>
-                                    </div>
+                                <div class="form-inline float-right">
+                                    <a id="addMedicineButton" asp-action="AddMedicine" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                        <i class="fa fa-plus"></i> Adicionar Remédio
+                                    </a>
                                 </div>
 
-                                <hr />
-
                                 <table class="table table-bordered table-striped table-condensed text-center" id="medicineTable"></table>
+
+                                <div id="spinner-container" style="display: none;">
+                                    <i class="fa fa-spinner fa-spin" id="spinner"></i>
+                                </div>
 
                             </div>
                         </div>
