--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -68,7 +68,7 @@
                             </div>
                             <div class="card-block">
                                 <div class="form-inline float-right">
-                                    <a asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                    <a id="addDoctorButton" asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                         <i class="fa fa-plus"></i> Adicionar Médico
                                     </a>
                                 </div>
