--- a/_source/LigaCancer/Views/Doctor/Partials/_AddDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Partials/_AddDoctor.cshtml
@@ -1,14 +1,15 @@
 ﻿@model LigaCancer.Models.FormModel.DoctorFormModel
 
-<form asp-action="EditDoctor"
+<form id="addDoctorForm" asp-action="AddDoctor"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="Error"
-      data-ajax-success="EditSuccess"
+      data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Médico" }' />
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Médico" }' />
+
     <div class="modal-body form-horizontal">
         <h4>Médico</h4>
         <hr />
@@ -25,7 +26,6 @@
             <input asp-for="CRM" class="form-control" />
             <span asp-validation-for="CRM" class="text-danger"></span>
         </div>
-        <input type="hidden" asp-for="DoctorId" value="@Model.DoctorId" />
     </div>
 
     <partial name="_ModalFooter" model="new ModalFooter { }" />
