--- a/_source/LigaCancer/Views/Doctor/Partials/_EditDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Partials/_EditDoctor.cshtml
@@ -1,15 +1,14 @@
 ﻿@model LigaCancer.Models.FormModel.DoctorFormModel
 
-<form asp-action="AddDoctor"
+<form id="editDoctorForm" asp-action="EditDoctor"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="Error"
-      data-ajax-success="AddSuccess"
+      data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Médico" }' />
-
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Médico" }' />
     <div class="modal-body form-horizontal">
         <h4>Médico</h4>
         <hr />
@@ -26,6 +25,7 @@
             <input asp-for="CRM" class="form-control" />
             <span asp-validation-for="CRM" class="text-danger"></span>
         </div>
+        <input type="hidden" asp-for="DoctorId" value="@Model.DoctorId" />
     </div>
 
     <partial name="_ModalFooter" model="new ModalFooter { }" />
