--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -124,6 +124,7 @@
     <environment names="Development">
         <script src="~/lib/jquery/jquery.min.js"></script>
         <script src="~/js/coreui.min.js"></script>
+        <script src="~/lib/popper/umd/popper.min.js"></script>
         <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
         <script src="~/js/main.js"></script>
