--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@using LigaCancer.Code
+﻿@model LigaCancer.Models.SearchModel.CancerTypeSearchModel
+@using LigaCancer.Code
 @{
     ViewData["Title"] = "Tipos de Câncer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @section styles{
-<environment names="Development">
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/buttons/1.5.4/css/buttons.bootstrap4.min.css" />
-</environment>
+    <environment names="Development">
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    </environment>
     <environment exclude="Development">
         <link href="~/dist/css/datatables.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
@@ -39,12 +39,15 @@
                             </div>
                             <div class="card-block collapse show" id="filterCollapse">
                                 <form id="searchForm">
-                                    <div class="form-row form-group">
-                                    </div>
-                                    <div class="form-inline float-right">
-                                        <div class="form-group">
-                                            <div class="btn-group">
-                                                <button type="submit" class="btn btn-primary">
+                                    <div>
+                                        <div class="col-lg-12 form-row">
+                                            <div class="col-lg-3 form-group">
+                                                <label asp-for="Name"></label>
+                                                <input asp-for="Name" class="form-control" />
+                                                <span asp-validation-for="Name" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-lg-3 form-group">
+                                                <button type="submit" class="btn btn-primary filter">
                                                     <i class="fas fa-filter"></i> Filtrar
                                                 </button>
                                             </div>
@@ -86,19 +89,18 @@
 
 <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
-@section scripts
-    {
+@section scripts {
     <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/lib/jszip/jszip.min.js"></script>
+        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
+        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
+        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="~/js/cancerType.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.bootstrap4.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.html5.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/cancer-type.min.js" asp-append-version="true"></script>
