--- a/_source/LigaCancer/Views/CancerType/Partials/_AddCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Partials/_AddCancerType.cshtml
@@ -1,15 +1,14 @@
 ﻿@model LigaCancer.Models.FormModel.CancerTypeFormModel
 
-<form asp-action="EditCancerType"
+<form id="addCancerTypeForm" asp-action="AddCancerType"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-failure="Error"
+      data-ajax-success="AddSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Tipo de Câncer" }' />
-
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Tipo de Câncer" }' />
     <div class="modal-body form-horizontal">
         <h4>Tipo de Câncer</h4>
         <hr />
@@ -21,10 +20,7 @@
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-        <input type="hidden" asp-for="CancerTypeId" value="@Model.CancerTypeId" />
     </div>
 
     <partial name="_ModalFooter" model="new ModalFooter { }" />
-
 </form>
-
