--- a/_source/LigaCancer/Views/CancerType/Partials/_EditCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Partials/_EditCancerType.cshtml
@@ -1,14 +1,15 @@
 ﻿@model LigaCancer.Models.FormModel.CancerTypeFormModel
 
-<form asp-action="AddCancerType"
+<form id="editCancerTypeForm" asp-action="EditCancerType"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-failure="Error"
+      data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Tipo de Câncer" }' />
+    <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Tipo de Câncer" }' />
+
     <div class="modal-body form-horizontal">
         <h4>Tipo de Câncer</h4>
         <hr />
@@ -20,7 +21,9 @@
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
+        <input asp-for="CancerTypeId" value="@Model.CancerTypeId" />
     </div>
 
     <partial name="_ModalFooter" model="new ModalFooter { }" />
+
 </form>
