--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -208,7 +208,8 @@
         <script src="~/lib/dropzone/min/dropzone.min.js"></script>
         <script src="~/lib/jeditable/jquery.jeditable.min.js"></script>
         <script src="~/js/patient.js"></script>
-        <script src="https://unpkg.com/gijgo@1.9.13/js/messages/messages.pt-br.js"></script>
+        <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.min.js"></script>
+        <script src="~/lib/jquery-mask/jquery.mask.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
