--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -32,7 +32,7 @@
         <div class="form-group col-md-6">
             <label asp-for="MonthlyIncome" class="control-label"></label>
             <input asp-for="MonthlyIncome" class="form-control" />
-            <span asp-validation-for="MonthlyIncome" class="text-dange"></span>
+            <span asp-validation-for="MonthlyIncome" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
             <label asp-for="Sex" class="control-label"></label>
