--- a/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
@@ -13,9 +13,11 @@
                 <span class="fa fa-user"> @User.Identity.Name</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
-                <a asp-action="Logout" asp-controller="Account" class="dropdown-item">
-                    <i class="fa fa-lock"></i> Logout
-                </a>
+                <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                    <button type="submit" class="dropdown-item">
+                        <i class="fa fa-lock"></i> Logout
+                    </button>
+                </form>
             </div>
         </li>
     </ul>
