--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -39,7 +39,12 @@
                                     <i class="fa fa-passport"></i>
                                 </span>
                             </div>
-                            <input asp-for="Login.Password" type="password" class="form-control" placeholder="Senha">
+                            <input asp-for="Login.Password" type="password" class="form-control" placeholder="Senha" id="password">
+                            <div class="input-group-append ">
+                                <span class="input-group-text">
+                                    <i class="fas fa-eye-slash" id="eyePassword" ></i>
+                                </span>
+                            </div>
                         </div>
                         <span asp-validation-for="Login.Password" class="text-danger ml-5"></span>
                     </div>
