--- a/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
@@ -36,15 +36,29 @@
         </div>
         <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="input-group">
+                <input asp-for="Password" class="form-control" />
+                <div class="input-group-append">
+                    <span class="input-group-text">
+                        <i class="fas fa-eye" />
+                    </span>
+                </div>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
         </div>
         <div class="form-group">
             <label asp-for="ConfirmPassword" class="control-label"></label>
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <div class="input-group">
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <div class="input-group-append">
+                    <span class="input-group-text">
+                        <i class="fas fa-eye" />
+                    </span>
+                </div>
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            </div>
         </div>
-    </div>
 
     <partial name="_ModalFooter"  />
 
