--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -76,5 +76,6 @@
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/login.min.js" asp-append-version="true"></script>
+        <script src="~/js/login.js"></script>
     </environment>
 }
