--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -33,7 +33,12 @@
                                     <i class="fa fa-passport"></i>
                                 </span>
                             </div>
-                            <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha">
+                            <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha" id="passwordConfirm">
+                            <div class="input-group-append ">
+                                <span class="input-group-text">
+                                    <i class="fas fa-eye-slash" id="eyePasswordConfirm"></i>
+                                </span>
+                            </div>
                         </div>
                         <span asp-validation-for="ResetPassword.Password" class="text-danger ml-5"></span>
                     </div>
@@ -45,7 +50,12 @@
                                     <i class="fa fa-passport"></i>
                                 </span>
                             </div>
-                            <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha">
+                            <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha" id="password">
+                            <div class="input-group-append ">
+                                <span class="input-group-text">
+                                    <i class="fas fa-eye-slash" id="eyePassword"></i>
+                                </span>
+                            </div>
                         </div>
                         <span asp-validation-for="ResetPassword.ConfirmPassword" class="text-danger ml-5"></span>
                     </div>
@@ -65,4 +75,10 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <environment names="Development">
+        <script src="~/js/reset.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/reset.js"></script>
+    </environment>
 }
