--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -105,5 +105,6 @@
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/user.min.js" asp-append-version="true"></script>
+        <script src="~/js/user.js"></script>
     </environment>
 }
