--- a/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
@@ -37,28 +37,28 @@
         <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
             <div class="input-group">
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" id="password"/>
                 <div class="input-group-append">
                     <span class="input-group-text">
-                        <i class="fas fa-eye" />
+                        <i class="fas fa-eye-slash" id="eyePassword" />
                     </span>
                 </div>
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <span asp-validation-for="Password" class="text-danger" ></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="ConfirmPassword" class="control-label"></label>
             <div class="input-group">
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <div class="input-group-append">
-                    <span class="input-group-text">
-                        <i class="fas fa-eye" />
-                    </span>
-                </div>
+                <input asp-for="ConfirmPassword" class="form-control" id="passwordConfirm"/>
+                    <div class="input-group-append">
+                        <span class="input-group-text">
+                            <i class="fas fa-eye-slash" id="eyePasswordConfirm" />
+                        </span>
+                    </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            </div>
         </div>
+    </div>
 
     <partial name="_ModalFooter"  />
 
