--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                     <span class="icon-menu"></span>
                     <span class="icon-menu"></span>
                 </button>
-                <a href="/" class="navbar-brand"><img src="img/logo.png" alt=""></a>
+                @*<a href="/" class="navbar-brand"><img src="img/logo.png" alt=""></a>*@
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -69,7 +69,7 @@
                     <div id="carousel-slider" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                                <img src="img/imagem4.jpg" alt="">
+                                <img src="~/img/imagem4.png" alt="" style="min-height: 175px;">
                                 <div class="carousel-caption">
                                     <h3 class="slide-title animated fadeInDown"><span>RVCC</span> - Rede Videirense de Combate ao Câncer</h3>
                                 </div>
@@ -127,19 +127,20 @@
                         </div>
                         <div class="col-lg-4 col-md-12 col-xs-12">
                             <div class="form-group">
-                                <i class="contact-icon fa fa-envelope-o"></i>
+                                <i class="contact-icon far fa-envelope"></i>
                                 <input type="email" class="form-control" id="email" placeholder="Email" required data-error="Please enter your email">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 col-xs-12">
                             <div class="form-group">
-                                <i class="contact-icon fa fa-pencil-square-o"></i>
+                                <i class="contact-icon far fa-edit"></i>
                                 <input type="text" class="form-control" id="subject" placeholder="Assunto" required data-error="Please enter your Subject">
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="col-lg-12 col-md-12 col-xs-12">
+                            <i class="contact-icon far fa-comment-alt"></i>
                             <textarea class="form-control" id="message" rows="4" placeholder="Mensagem" required data-error="Please enter your message"></textarea>
                             <div class="help-block with-errors"></div>
                             <button type="submit" id="form-submit" class="btn btn-common btn-form-submit">Enviar Mensagem</button>
@@ -158,18 +159,18 @@
                         Rua Coronel Fagundes, 148 - Centro - Videira/SC
                     </address>
                     <div class="tel-info">
-                        <a href="tel:1800452308"><i class="lni-mobile icons cyan-color contact-info-icon"></i>(49) 3533-8953</a>
-                        <a href="tel:+61(8)82343555"><i class="lni-phone icons cyan-color contact-info-icon"></i>(49) 99816-5281</a>
+                        <a href="tel:(49) 3533-8953"><i class="lni-mobile icons cyan-color contact-info-icon"></i>(49) 3533-8953</a>
+                        <a href="tel:(49) 99816-5281"><i class="lni-phone icons cyan-color contact-info-icon"></i>(49) 99816-5281</a>
                     </div>
                     <a href="mailto:rede_rvcc@hotmail.com"><i class="lni-envelope icons cyan-color contact-info-icon"></i>rede_rvcc@hotmail.com</a>
                     
-                    <ul class="social-links">
+                    <ul class="social-links ml-3">
                         <li>
-                            <a href="https://www.facebook.com/redevideirensecombateaocancer" class="fab fa-facebook"></a>
+                            <a href="https://www.facebook.com/redevideirensecombateaocancer" class="fab fa-facebook" target="_blank" style="font-size: 25px;"></a>
                         </li>
 
                         <li>
-                            <a href="https://www.instagram.com.br/rede_rvcc" class="fab fa-instagram"></a>
+                            <a href="https://www.instagram.com.br/rede_rvcc" class="fab fa-instagram" target="_blank" style="font-size: 25px;"></a>
                         </li>
                     </ul>
                 </div>
